--- a/my_list.html
+++ b/my_list.html
@@ -1,6 +1,8 @@
 <li>"Love Will Tear Us Apart"
 </li>
-<li></li>"Bela Lugosi's Dead"
+<li>
+  
+</li>"Bela Lugosi's Dead"
 "A Forest"
 "Nine While Nine"
 "Girlfriend In a Com
