Automatically backed up by Learn

--- a/my_list.html
+++ b/my_list.html
@@ -1,9 +1,9 @@
 <li>"Love Will Tear Us Apart"
 </li>
 <li>
-  
-</li>"Bela Lugosi's Dead"
-"A Forest"
+  "Bela Lugosi's Dead"
+</li>
+<li></li>"A Forest"
 "Nine While Nine"
 "Girlfriend In a Com
 </li>
