--- a/my_list.html
+++ b/my_list.html
@@ -3,8 +3,11 @@
 <li>
   "Bela Lugosi's Dead"
 </li>
-<li></li>
-"A Forest"
-"Nine While Nine"
-"Girlfriend In a Com
+<li>
+  "A Forest"
 </li>
+<li></li>
+<li></li>"Nine While Nine"
+<li>
+  
+</li>"Girlfriend In a Com
