Automatically backed up by Learn

--- a/my_list.html
+++ b/my_list.html
@@ -6,10 +6,9 @@
 <li>
   "A Forest"
 </li>
-<li></li>
 <li>
-  
-</li>"Nine While Nine"
+  "Nine While Nine"
+</li>
 <li>
   "Girlfriend In a Com
 </li>
